// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericSelectField  should render  snapshots for  loading items 1`] = `
<SelectField
  autoWidth={false}
  disabled={true}
  dropDownMenuProps={
    Object {
      "animated": false,
    }
  }
  floatingLabelText="Select item loading..."
  fullWidth={false}
  id="selectedValue"
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
  value={null}
>
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    key="select_field_0"
    primaryText="Item 1"
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
    value="Item 1"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    key="select_field_1"
    primaryText="Item 2"
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
    value="Item 2"
  />
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    key="select_field_2"
    primaryText="Item 3"
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
    value="Item 3"
  />
</SelectField>
`;

exports[`GenericSelectField  should render  snapshots for  no items 1`] = `
<SelectField
  autoWidth={false}
  disabled={false}
  dropDownMenuProps={
    Object {
      "animated": false,
    }
  }
  floatingLabelText="Select item "
  fullWidth={false}
  id="selectedValue"
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
/>
`;

exports[`GenericSelectField  should render  snapshots for  one item 1`] = `
<SelectField
  autoWidth={false}
  disabled={false}
  dropDownMenuProps={
    Object {
      "animated": false,
    }
  }
  floatingLabelText="Select item "
  fullWidth={false}
  id="selectedValue"
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
>
  <MenuItem
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    checked={false}
    desktop={false}
    disabled={false}
    focusState="none"
    insetChildren={false}
    key="select_field_0"
    primaryText="Item 1"
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
    value="Item 1"
  />
</SelectField>
`;
